--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bentham&family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
+
     <script> if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer </script> 
     <title>Actuali-toute</title>
   </head>
